Usunięto podrepozytorium sisi z indeksu Gita

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,54 @@
 @tailwind utilities;
 
 body {
-  @apply bg-white text-black font-sans;
+  @apply bg-[#fff800] text-black font-sans;
+}
+
+@layer utilities {
+  .font-permanent-marker {
+    font-family: var(--font-permanent-marker);
+  }
+  @keyframes slideInRight {
+    from {
+      opacity: 0;
+      transform: translateX(100px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes fadeDown {
+    from {
+      opacity: 0;
+      transform: translateY(-30px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .animate-slide-in-right {
+    animation: slideInRight 1s ease-out forwards;
+  }
+  
+  .animate-fade-down {
+    animation: fadeDown 0.8s ease-out forwards;
+  }
+  
+  .animate-delay-1 {
+    animation-delay: 0.2s;
+  }
+  .animate-delay-2 {
+    animation-delay: 0.4s;
+  }
+  .animate-delay-3 {
+    animation-delay: 0.6s;
+  }
+  .animate-delay-4 {
+    animation-delay: 0.8s;
+  }
+  
 }
